--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,16 @@ matrix:
     - os: linux
       dist: trusty
       mono: latest
-      script: make publish
+      script: make all-release
     - os: osx
       mono: latest
       before_install: brew install hudochenkov/sshpass/sshpass
-      script: make publish
+      script: make all-release
 
     - os: linux
       dist: precise
       mono: 3.2.8
-      script: make publish
+      script: make all-release
 
     - os: linux
       dist: precise
