Implement Plugin Manager for handling replacement plugins.
(Manual rebase of the PluginErrors branch)

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -142,7 +142,9 @@
     <Compile Include="Simulation\TrainManager\Train\Handles.cs" />
     <Compile Include="Simulation\TrainManager\Passengers.cs" />
     <Compile Include="Simulation\TrainManager\Station.cs" />
-    <Compile Include="Simulation\TrainManager\Train\Reverser.cs" />
+	<Compile Include="Simulation\TrainManager\Train\Reverser.cs" />
+	<Compile Include="Simulation\TrainPlugins\Blacklist.cs" />
+	<Compile Include="Simulation\TrainPlugins\CompatibleReplacement.cs" />
     <Compile Include="Simulation\World\BackgroundManager.cs" />
     <Compile Include="Simulation\World\Transformations.cs" />
     <Compile Include="System\Functions\CrashHandler.cs" />
