Add Debian package build
Initial Debian package build.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ obj/
 linuxbuild.*
 macbuild.*
 mac/
+installers/debian.deb
+
+#Debian Build directory
+installers/debian/usr/lib/*
+
+#Gedit temporary files
+*~
 
 # Misc. Visual Studio files
 *.sdf
