--- a/assets/In-game/Slim/interface.cfg
+++ b/assets/In-game/Slim/interface.cfg
@@ -4,7 +4,7 @@
 
 [element]
 subject = messages
-position = 4, 24
+position = 8, 18
 alignment = -1, -1
 textcolor = 0, 0, 0, 255
 textsize = 2
@@ -42,28 +42,28 @@ textcolor = 0, 0, 0, 255
 
 [element]
 subject = reverser
-position = 4, -10
+position = 8, -10
 alignment = -1, 1
 textsize = 1
 textshadow = 1
 
 [element]
 subject = power
-position = 28, -10
+position = 46, -10
 alignment = -1, 1
 textsize = 1
 textshadow = 1
 
 [element]
 subject = brake
-position = 52, -10
+position = 82, -10
 alignment = -1, 1
 textsize = 1
 textshadow = 1
 
 [element]
 subject = single
-position = 24, -10
+position = 46, -10
 alignment = -1, 1
 textsize = 1
 textshadow = 1
@@ -75,8 +75,9 @@ textshadow = 1
 
 [element]
 subject = doorsleft
-position = -12, -10
+position = -5, -10
 alignment = 0, 1
+textalignment = 1, 0
 textsize = 1
 textshadow = 1
 textcolor = 0, 0, 0, 255
@@ -84,8 +85,9 @@ transition = 2
 
 [element]
 subject = doorsright
-position = 12, -10
+position = 5, -10
 alignment = 0, 1
+textalignment = -1, 0
 textsize = 1
 textshadow = 1
 textcolor = 0, 0, 0, 255
@@ -171,7 +173,7 @@ value = 117 ; vertical radius
 
 [element]
 subject = ai
-position = 4, -26
+position = 8, -26
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 1
@@ -180,7 +182,7 @@ transition = 2
 
 [element]
 subject = clock
-position = 4, -42
+position = 8, -42
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 1
@@ -189,7 +191,7 @@ transition = 2
 
 [element]
 subject = speed
-position = 4, -56
+position = 8, -58
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 1
@@ -198,7 +200,7 @@ transition = 2
 
 [element]
 subject = fps
-position = 4, -70
+position = 8, -74
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 1
