Update Spanish and Catalan translations

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-11-27
+; last updated: 2017-02-06
 ; by Marc Riera Irigoyen
 
 [program]
@@ -49,7 +49,7 @@ sound_openal_device = No s'ha pogut obrir el dispositiu de so OpenAL.
 fullscreen_switch1 = S'ha produït un error en canviar al mode de pantalla completa. 
 fullscreen_switch2 = Comproveu la configuració de resolució de pantalla completa.
 route_corrupt_withtrack = La ruta seleccionada està corrompuda: \r\n No s'ha trobat la secció WithTrack.
-route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
+route_corrupt_nostations = La ruta seleccionada està corrompuda: \r\n No s'ha definit cap estació.
 plugin_failure1 = No s'ha pogut carregar l'extensió del tren [plugin]. 
 plugin_failure2 = S'utilitzaran els sistemes ATS/ATC per defecte, que podrien ser incompatibles.
 
@@ -142,7 +142,7 @@ install_version_error = Error en la versió del paquet
 install_version_new = Ja hi ha instal·lada una versió posterior del paquet seleccionat.
 install_version_old = Ja hi ha instal·lada una versió anterior del paquet seleccionat.
 install_version_same = Ja hi ha instal·lada la mateixa versió del paquet seleccionat.
-install_success = S'han instal·lat els paquets correctament.
+install_success = S'ha instal·lat el paquet correctament.
 install_success_header = Instal·lació completada
 install_success_files = Llistat de fitxers instal·lats:
 install_failure = Ha fallat la instal·lació del paquet.
@@ -172,9 +172,9 @@ creation_additems = Afegir fitxers
 creation_selecteditems = Es crearà un paquet amb els fitxers i carpetes següents:
 creation_new_guid = El nou paquet té assignat el següent GUID:
 creation_header = Detalls del paquet
-creation_name = Nom del paquet.
-creation_author = Autor del paquet.
-creation_description = Descripció del paquet.
+creation_name = Nom del paquet
+creation_author = Autor del paquet
+creation_description = Descripció del paquet
 creation_version = Versió (número de versió amb aquest format: 1.0.0)
 creation_version_invalid = Heu triat un número de versió no vàlid. \r\n Torneu-ho a intentar.
 creation_success = S'ha creat el paquet correctament.
@@ -249,7 +249,7 @@ down = Mou avall
 selection = Funció seleccionada actualment
 selection_command = Funció:
 selection_keyboard = Teclat:
-selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grab = Premeu aquí per activar la captura del teclat per seleccionar automàticament la tecla desitjada.
 selection_keyboard_assignment_grabbing = Premeu qualsevol tecla...
 selection_keyboard_key = Tecla:
 selection_keyboard_modifiers = Modificadors:
@@ -258,8 +258,8 @@ selection_keyboard_modifiers_ctrl = Ctrl
 selection_keyboard_modifiers_alt = Alt
 selection_joystick = Joystick:
 selection_joystick_assignment = Assignació:
-selection_joystick_assignment_grab = Premeu aquí per activar el moviment del joystick per seleccionar automàticament el botó, l'eix o la palanca desitjada.
-selection_joystick_assignment_grab_normal = Premeu un botó o mou un eix o palanca en la direcció desitjada...
+selection_joystick_assignment_grab = Premeu aquí per activar la captura del joystick per seleccionar automàticament el botó, l'eix o la palanca desitjada.
+selection_joystick_assignment_grab_normal = Premeu un botó o moveu un eix o palanca en la direcció desitjada...
 selection_joystick_assignment_grab_fullaxis = Moveu un eix en la direcció "incrementar" o "tracció"...
 attached = Joysticks connectats
 assignment_keyboard = Teclat
@@ -330,7 +330,7 @@ misc_simulation_toppling = Bolcades
 misc_simulation_collisions = Topades
 misc_simulation_derailments = Descarrilaments
 misc_simulation_blackbox = Activa la caixa negra
-misc_simulation_loadingsway = Enable loading sway
+misc_simulation_loadingsway = Activa el balanceig del tren
 misc_controls = Controls
 misc_controls_joysticks = Joysticks activats
 misc_controls_threshold = Llindar del joystick:
@@ -506,7 +506,7 @@ assignment_current = Assignació actual:
 ats = ATS
 atsoperation = ATS ACTIVAT
 atsppower = ATS-P FUNCIONANT
-atsppattern = BALISA PROPERA
+atsppattern = BALISA ATS-P
 atspbrakeoverride = FRE DESACTIVAT
 atspbrakeoperation = FRE APLICAT
 atsp = ATS-P
