Basic implementation of a plugin blacklist/ replacement DB

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -143,6 +143,8 @@
     <Compile Include="Simulation\TrainManager\Passengers.cs" />
     <Compile Include="Simulation\TrainManager\Station.cs" />
     <Compile Include="Simulation\TrainManager\Train\Reverser.cs" />
+    <Compile Include="Simulation\TrainPlugins\Blacklist.cs" />
+    <Compile Include="Simulation\TrainPlugins\CompatibleReplacement.cs" />
     <Compile Include="Simulation\World\BackgroundManager.cs" />
     <Compile Include="Simulation\World\Transformations.cs" />
     <Compile Include="System\Functions\CrashHandler.cs" />
@@ -168,9 +170,6 @@
     </Compile>
     <Compile Include="UserInterface\formAbout.Designer.cs">
       <DependentUpon>formAbout.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UserInterface\formMain.Packages.cs">
-      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Parsers\XMLParser.cs" />
     <Compile Include="System\Functions\Extensions.cs" />
@@ -250,21 +249,25 @@
       <DependentUpon>formMain.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+	<Compile Include="UserInterface\formMain.Packages.cs">
+	  <DependentUpon>formMain.cs</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="OldCode\FunctionScripts.cs" />
     <Compile Include="OldCode\Game.cs" />
     <Compile Include="System\Functions\Illustrations.cs" />
     <Compile Include="OldCode\Interface.cs" />
-    <Compile Include="OldCode\LegacyPlugin.cs">
+    <Compile Include="Simulation\TrainPlugins\LegacyPlugin.cs">
       <DependentUpon>PluginManager.cs</DependentUpon>
     </Compile>
     <Compile Include="OldCode\Loading.cs" />
     <Compile Include="OldCode\MainLoop.cs" />
-    <Compile Include="OldCode\NetPlugin.cs">
+    <Compile Include="Simulation\TrainPlugins\NetPlugin.cs">
       <DependentUpon>PluginManager.cs</DependentUpon>
     </Compile>
     <Compile Include="OldCode\NewCode\GameWindow.cs" />
     <Compile Include="OldCode\ObjectManager.cs" />
-    <Compile Include="OldCode\PluginManager.cs" />
+    <Compile Include="Simulation\TrainPlugins\PluginManager.cs" />
     <Compile Include="OldCode\Renderer.cs" />
     <Compile Include="System\Functions\Timers.cs" />
     <Compile Include="OldCode\Timetable.cs" />
