Continue refactor on brake system

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -138,11 +138,17 @@
     <Compile Include="Simulation\TrainManager\Doors.cs" />
     <Compile Include="Simulation\TrainManager\Functions.cs" />
     <Compile Include="Simulation\TrainManager\Train\AirBrake\AirBrake.cs" />
-    <Compile Include="Simulation\TrainManager\Train\AirBrake\AirBrake.Types.cs" />
-    <Compile Include="Simulation\TrainManager\Train\AirBrake\Compressor.cs" />
-    <Compile Include="Simulation\TrainManager\Train\AirBrake\EqualizingReservior.cs" />
-    <Compile Include="Simulation\TrainManager\Train\AirBrake\MainReservoir.cs" />
-    <Compile Include="Simulation\TrainManager\Train\AirCompressor.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\AuxillaryReservoir.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\BrakeCylinder.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Types\AirBrake.Types.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Types\AutomaticAirBrake.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\BrakePipe.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Types\ElectricCommandBrake.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Types\ElectromagneticStraightAirBrake.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\EqualizingReservior.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\MainReservoir.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\StraightAirPipe.cs" />
+    <Compile Include="Simulation\TrainManager\Train\AirBrake\Components\AirCompressor.cs" />
     <Compile Include="Simulation\TrainManager\Train\BrakeSystem.AirBrake.cs" />
     <Compile Include="Simulation\TrainManager\Train\BrakeSystem.cs" />
     <Compile Include="Simulation\TrainManager\Train\Handles.cs" />
