--- a/assets/Languages/de-CH.cfg
+++ b/assets/Languages/de-CH.cfg
@@ -50,6 +50,7 @@ fullscreen_switch1 = Beim Versuch, in den Vollbildmodus zu wechseln, ist ein Feh
 fullscreen_switch2 = Bitte die eingestellte Vollbildauflösung kontrollieren.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
+route_corrupt_noobjects = The selected route is corrupt: \r\n No objects defined.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
