--- a/assets/Languages/it-IT.cfg
+++ b/assets/Languages/it-IT.cfg
@@ -50,6 +50,7 @@ fullscreen_switch1 = Errore durante il tentativo di passare a schermo intero.
 fullscreen_switch2 = Controllare le impostazione per lo schermo intero.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
+route_corrupt_noobjects = The selected route is corrupt: \r\n No objects defined.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
