--- a/assets/Languages/ro-RO.cfg
+++ b/assets/Languages/ro-RO.cfg
@@ -682,6 +682,7 @@ DELETE = Şterge
 DOLLAR = Dolar ($)
 DOWN = Jos (↓)
 END = Sfârşit
+ENTER = Enter
 EQUALS = Egal (=)
 ESCAPE = Ieşire
 EURO = Euro (€)
