--- a/assets/Languages/ru-RU.cfg
+++ b/assets/Languages/ru-RU.cfg
@@ -682,6 +682,7 @@ DELETE = Клавиша "Delete"
 DOLLAR = Знак доллара ($)
 DOWN = Стрелка вниз
 END = Клавиша "End"
+ENTER = Enter
 EQUALS = Знак равенства (=)
 ESCAPE = Клавиша "Escape"
 EURO = Знак евро (€)
