--- a/assets/Languages/zh-HK.cfg
+++ b/assets/Languages/zh-HK.cfg
@@ -682,6 +682,7 @@ DELETE = Delete
 DOLLAR = Dollar ($)
 DOWN = Down (↓)
 END = End
+ENTER = Enter
 EQUALS = Equals (=)
 ESCAPE = Escape
 EURO = Euro (€)
